--- a/deploy/tasks/main.yml
+++ b/deploy/tasks/main.yml
@@ -22,5 +22,5 @@
 - name: excute deploy.sh
   command: sh /home/ram/deploy.sh
   notify:
-    - name: restart tomcat
+    - restart tomcat
 # tasks file for deploy
